--- a/pertemuan_4/variabel_type_data.html
+++ b/pertemuan_4/variabel_type_data.html
@@ -8,8 +8,11 @@
 <body>
     
     <script>
-        let namaMateri = "Javascript";
-        let Nilaiakhier = 
+        let namaMateri = "Belajar Javascript";
+        let Nilaiakhier = 96;
+        let setatusOnline = true;
+
+        document.writeln(`Hallo Saya ${namaMateri} nilai saya ${Nilaiakhier}`)
     </script>
 </body>
 </html> 
