operator logika belum selesai

--- a/pertemuan_8/operator_logika.html
+++ b/pertemuan_8/operator_logika.html
@@ -6,13 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+
     <script>
-        let username = "123";
+        let username = "admin";
         let password = 123;
 
-        let hasil = username !== password
-        document.writeln(hasil)
+        let hasil = username === "admin" && password === 123;
+        document.write(hasil)
     </script>
 </body>
 </html>
