operator logika selesai

--- a/pertemuan_8/operator_logika.html
+++ b/pertemuan_8/operator_logika.html
@@ -9,11 +9,22 @@
 
 
     <script>
-        let username = "admin";
-        let password = 123;
+        // let username = "admin";
+        // let password = 123;
 
-        let hasil = username === "admin" && password === 123;
-        document.write(hasil)
+        // let hasil = username === "admin" && password === 123;
+        // document.write(hasil)
+
+        // let login = true;
+        // let poin = false;
+
+        // let hasil = login || poin;
+        // document.write("Apakah pengguna memiliki akses?", hasil)
+
+        let sudahLogin = false;
+        let status = !sudahLogin;
+
+        document.write("Apakah pengguna belum login ?", status)
     </script>
 </body>
 </html>
